--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -4,11 +4,107 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RepositoryParser"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525"
+        Title="RepositoryParser" Height="600" Width="1200"
+        Icon="../Assets/Ratings Filled-50.png"
         DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         >
+    <Window.Resources>
+        <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </Window.Resources>
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding OnLoadCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
+
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="6*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="5"/>
+        </Grid.RowDefinitions>
+
+        <Rectangle Grid.ColumnSpan="1000" Grid.Row="0">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF52802B" Offset="0" />
+                    <GradientStop Color="Green" Offset="1" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+
+        <Label x:Uid="FirstPageTitle" Grid.Row="0" Grid.Column="1" FontSize="23" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Wybierz Repozytorium, na którym chcesz pracować:" Width="auto"  />
+        <StackPanel Grid.Row="1" Grid.Column="1">
+            <Label x:Name="UrlLabel" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Wpisz Adres URL repozytorium"/>
+            <TextBox x:Name="UrlTextBlock" FontSize="16" Margin="5" Text="{Binding UrlTextBox}" />
+            <Label x:Name="LocalChooseLabel" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Lub wybierz lokalnie"/>
+            <Button x:Name="PicFileBtn" HorizontalAlignment="Center" Content="Wybierz plik" Command="{Binding PickFileCommand}" />
+        </StackPanel>
+
+        <ListView Grid.Row="2" Grid.Column="1" ItemsSource="{Binding SortDataView}">
+            <ListView.View>
+                <GridView>
+
+                    <GridViewColumn Width="40" DisplayMemberBinding="{Binding ID}">
+                        <GridViewColumnHeader Content="ID" Command="{Binding SortCommand}" CommandParameter="ID"/>
+                    </GridViewColumn>
+
+                    <GridViewColumn Width="auto"  DisplayMemberBinding="{Binding Message}">
+                        <GridViewColumnHeader Content="Message" Command="{Binding SortCommand}" CommandParameter="Message"/>
+                    </GridViewColumn>
+
+                    <GridViewColumn Width="auto" DisplayMemberBinding="{Binding Author}">
+                        <GridViewColumnHeader Content="Author" Command="{Binding SortCommand}" CommandParameter="Author"/>
+                    </GridViewColumn>
+
+                    <GridViewColumn Width="auto" DisplayMemberBinding="{Binding Date}">
+                        <GridViewColumnHeader Content="Date" Command="{Binding SortCommand}" CommandParameter="Date" />
+                    </GridViewColumn>
+
+                    <GridViewColumn Width="auto" DisplayMemberBinding="{Binding Email}">
+                        <GridViewColumnHeader Content="Email" Command="{Binding SortCommand}" CommandParameter="Email" />
+                    </GridViewColumn>
+
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <StackPanel Grid.Row="3" Grid.Column="1">
+            <Button x:Name="CloneRepositoryBtn" Command="{Binding OpenRepositoryCommand}" IsEnabled="{Binding IsCloneButtonEnabled }" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50"  Content="Dodaj repozytorium" Background="#FF52802B" FontSize="20" Margin="2" Padding="4" />
+        </StackPanel>
+
+        <DockPanel Grid.Row="2" Grid.Column="0">
+            <Button x:Name="GoToAnalisysBtn" Content="Analiza" Height="50" VerticalAlignment="Top" Command="{Binding GoToPageAnalisysCommand}" Background="#FF52802B" Margin="0,0,0,5"/>
+
+        </DockPanel>
+
+        <StackPanel Grid.Row="2" Grid.Column="2">
+            <Button x:Name="ClearDataBase" Content ="Wyczysc Baze" Height="50" VerticalAlignment="Top" Background="#FF52802B"  Command="{Binding ClearDataBaseCommand}" Margin="0,0,0,5"/>
+            <Button x:Name="Refresh" Content ="Odśwież" Height="50" VerticalAlignment="Top" Background="#FF52802B"  Command="{Binding RefreshCommand}" Margin="0,0,0,5"/>
+            <Button x:Name="Save" Content ="Eksportuj do pliku" Height="50" VerticalAlignment="Bottom" Background="#FF52802B"  Command="{Binding ExportFileCommand}" Margin="0,0,0,5"/>
+        </StackPanel>
+<!--        <StatusBar Grid.Row="2" Grid.Column="1" Visibility="{Binding ProgressBarVisibility, Converter={StaticResource BoolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}" >
+            <Controls:ProgressRing HorizontalAlignment="Right"
+                         IsActive="True"
+                         Width="100"
+                         Height="16"
+                         Margin="3"/>
+            <Separator />
+
+            <TextBlock Text="Trwa otwieranie repozytorium" />
+        </StatusBar>-->
     </Grid>
 </Window>
