--- a/RepositoryParser/RepositoryParser/App.xaml
+++ b/RepositoryParser/RepositoryParser/App.xaml
@@ -8,6 +8,9 @@
   <Application.Resources>
     <ResourceDictionary>
       <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:RepositoryParser.ViewModel" />
-    </ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                  
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
   </Application.Resources>
 </Application>
