Moved strings from chartWindow window to resources

--- a/RepositoryParser/RepositoryParser/View/ChartWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/ChartWindowView.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RepositoryParser.View"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+        xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
         Title="ChartWindowView" Height="750" Width="900"
         DataContext="{Binding Source={StaticResource Locator}, Path=Chart}"
@@ -28,33 +29,32 @@
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Label Grid.Row="0" Content="Ogólna analiza aktywności poszczególnych użytkowników:" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Label Grid.Row="0" Content="{x:Static resw:Resources.ChartWindowTitle}" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TabControl Grid.Row="1">
-            <TabItem Header="Wykres aktywności">
+            <TabItem Header="{x:Static resw:Resources.ActivityChart}">
                 <StackPanel>
-                    <chartingToolkit:Chart x:Name="Chart" MinHeight="600" Title="Wykres aktywnosci:" Background="Beige" LegendTitle="Legenda:">
+                    <chartingToolkit:Chart x:Name="Chart" MinHeight="600" Title="{x:Static resw:Resources.ActivityChart}" Background="Beige" LegendTitle="{x:Static resw:Resources.Legend}">
                         <chartingToolkit:Chart.Series>
                             <chartingToolkit:PieSeries x:Name="PieSeries"
-                        Title="Chart"
-                        ItemsSource="{Binding KeyCollection, Mode=OneWay}"
-                        DependentValueBinding="{Binding Path=Value}"
-                        IndependentValueBinding="{Binding Path=Key}" 
-                        DataContext="{Binding}"
-                        />
+                            ItemsSource="{Binding KeyCollection, Mode=OneWay}"
+                            DependentValueBinding="{Binding Path=Value}"
+                            IndependentValueBinding="{Binding Path=Key}" 
+                            DataContext="{Binding}"
+                            />
                         </chartingToolkit:Chart.Series>
                     </chartingToolkit:Chart>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="Lista aktywności">
+            <TabItem Header="{x:Static resw:Resources.ActivityList}">
                 <ListView ItemsSource="{Binding KeyCollection}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Width="120" DisplayMemberBinding="{Binding Key}">
-                                <GridViewColumnHeader Content="Autor" />
+                                <GridViewColumnHeader Content="{x:Static resw:Resources.CommitsList_Author}" />
                             </GridViewColumn>
 
                             <GridViewColumn Width="auto"  DisplayMemberBinding="{Binding Value}">
-                                <GridViewColumnHeader Content="Liczba Commitow" />
+                                <GridViewColumnHeader Content="{x:Static resw:Resources.CountOfCommits}" />
                             </GridViewColumn>
                         </GridView>
                     </ListView.View>
@@ -63,7 +63,13 @@
         </TabControl>
 
         <DockPanel Grid.Column="0" Grid.Row="2">
-            <Button x:Name="SaveFileBtn" Command="{Binding ExportFileCommand}" Background="#FF52802B"  Width="150" Margin="15,5" Content="Eksportuj do pliku" HorizontalAlignment="Left"/>
+            <Button x:Name="SaveFileBtn" 
+                    Command="{Binding ExportFileCommand}" 
+                    Background="#FF52802B"  
+                    Width="150"
+                    Margin="15,5" 
+                    Content="{x:Static resw:Resources.ExportToFileButton}" 
+                    HorizontalAlignment="Left"/>
         </DockPanel>
 
     </Grid>
