--- a/RepositoryParser/RepositoryParser/View/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityChartView.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RepositoryParser.View"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+        xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
         Title="DayActivityChartView" Height="600" Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=DayActivity }"
@@ -29,14 +30,13 @@
             </Rectangle.Fill>
         </Rectangle>
 
-        <Label Grid.Row="0" x:Name="WelcomeLabel" Content="Analiza aktywności według dni miesiąca:" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Label Grid.Row="0" x:Name="WelcomeLabel" Content="{x:Static resw:Resources.DayActivityWindowTitle}" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <TabControl Grid.Column="0" Grid.Row="1">
-            <TabItem Header="Wykres aktywności według dni">
+            <TabItem Header="{x:Static resw:Resources.DayActivityChartChart}">
                 <StackPanel>
-                    <chartingToolkit:Chart MinHeight="400" x:Name="Chart" Title="Wykres ilości commitów przypadających na każdy dzień miesiąca:" Background="Beige" Margin="0,0,0,50">
+                    <chartingToolkit:Chart MinHeight="400" x:Name="Chart" Title="{x:Static resw:Resources.DayActivityChartChart}" Background="Beige" Margin="0,0,0,50">
                         <chartingToolkit:Chart.Series>
                             <chartingToolkit:LineSeries x:Name="Series" 
-                                    Title=""
                                     ItemsSource="{Binding KeyCollection, Mode=OneWay}"
                                     DependentValueBinding="{Binding Path=Value}"
                                     IndependentValueBinding="{Binding Path=Key}" 
@@ -47,15 +47,15 @@
 
                 </StackPanel>
             </TabItem>
-            <TabItem Header="Lista aktywności według dni">
+            <TabItem Header="{x:Static resw:Resources.DayActivityChartList}">
                 <ListView ItemsSource="{Binding KeyCollection}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Width="120" DisplayMemberBinding="{Binding Key}">
-                                <GridViewColumnHeader Content="Dzień tygodnia" />
+                                <GridViewColumnHeader Content="{x:Static resw:Resources.Day}" />
                             </GridViewColumn>
                             <GridViewColumn Width="auto"  DisplayMemberBinding="{Binding Value}">
-                                <GridViewColumnHeader Content="Liczba Commitow" />
+                                <GridViewColumnHeader Content="{x:Static resw:Resources.CountOfCommits}" />
                             </GridViewColumn>
                         </GridView>
                     </ListView.View>
@@ -64,7 +64,13 @@
         </TabControl>
 
         <DockPanel Grid.Column="0" Grid.Row="2">
-            <Button x:Name="SaveFileBtn"  Background="#FF52802B" Width="150" Margin="15,5" Command="{Binding ExportFileCommand}" Content="Eksportuj do pliku" HorizontalAlignment="Left"/>
+            <Button x:Name="SaveFileBtn" 
+                    Background="#FF52802B" 
+                    Width="150"
+                    Margin="15,5" 
+                    Command="{Binding ExportFileCommand}"
+                    Content="{x:Static resw:Resources.ExportToFileButton}"
+                    HorizontalAlignment="Left"/>
         </DockPanel>
     </Grid>
 </Window>
