Moved strings from HourActivityView and WeekDayActivityView to resources

--- a/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RepositoryParser.View"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+        xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
         Title="MonthActivityChart" Height="700" Width="900"
         DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivity}"
@@ -30,12 +31,12 @@
         </Rectangle>
 
 
-        <Label Grid.Row="0" x:Name="WelcomeLabel" Content="Analiza aktywności według miesięcy:" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Label Grid.Row="0" x:Name="WelcomeLabel" Content="{x:Static resw:Resources.MonthActivityWindowTitle}" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <TabControl Grid.Column="0" Grid.Row="1">
-            <TabItem Header="Wykres aktywności według miesięcy">
+            <TabItem Header="{x:Static resw:Resources.MonthActivityChartChart}">
                 <StackPanel>
                     <Label x:Name="WhoLabel" FontSize="22" Content="{Binding AuthorTextBox}" Margin="5"/>
-                    <chartingToolkit:Chart MinHeight="500" x:Name="Chart" Title="Wykres aktywnosci:" Background="Beige" >
+                    <chartingToolkit:Chart MinHeight="500" x:Name="Chart" Title="{x:Static resw:Resources.MonthActivityChartChart}" Background="Beige" >
                         <chartingToolkit:Chart.Series>
                             <chartingToolkit:ColumnSeries x:Name="Series" 
                                     Title=""
@@ -49,15 +50,15 @@
 
                 </StackPanel>
             </TabItem>
-            <TabItem Header="Lista aktywności według miesięcy">
+            <TabItem Header="{x:Static resw:Resources.MonthActivityChartList}">
                 <ListView ItemsSource="{Binding KeyCollection}">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Width="120" DisplayMemberBinding="{Binding Key}">
-                                <GridViewColumnHeader Content="Miesiąc" />
+                                <GridViewColumnHeader Content="{x:Static resw:Resources.Month}" />
                             </GridViewColumn>
                             <GridViewColumn Width="auto"  DisplayMemberBinding="{Binding Value}">
-                                <GridViewColumnHeader Content="Liczba Commitow" />
+                                <GridViewColumnHeader Content="{x:Static resw:Resources.CountOfCommits}" />
                             </GridViewColumn>
                         </GridView>
                     </ListView.View>
@@ -66,7 +67,13 @@
         </TabControl>
 
         <DockPanel Grid.Column="0" Grid.Row="2">
-            <Button x:Name="SaveFileBtn" Command="{Binding ExportFileCommand}" Background="#FF52802B" Width="150" Margin="15,5" Content="Eksportuj do pliku" HorizontalAlignment="Left"/>
+            <Button x:Name="SaveFileBtn"
+                    Command="{Binding ExportFileCommand}" 
+                    Background="#FF52802B" 
+                    Width="150" 
+                    Margin="15,5" 
+                    Content="{x:Static resw:Resources.ExportToFileButton}"
+                    HorizontalAlignment="Left"/>
         </DockPanel>
 
     </Grid>
